# Polygon-Renderer

./: .gitignore  CMakeLists.txt  README.md
res/: vertexShader.glsl
src/: collision.c  collision.h  main.c  polygon.c  polygon.h  renderer.c  renderer.h  vector.c  vector.h
